projects/report-builder/src/app/common/multi-selection/multi-selection.component.css
a {
  cursor: pointer;
  text-decoration: none;
}

a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
  color: inherit;
  text-decoration: none;
}

.sortable-list {
  min-height: 30px;
  border-width: 0px;
  display: block;
  background: white;
  border-radius: 4px;
  overflow: hidden;
}

.set-box {
  margin-top: 5px;
  margin-bottom: 5px;
}

.item-box {
  padding: 2px 0px 0px 0px;
  margin-top: 5px;
  margin-bottom: 5px;
  border: solid 1px rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  color: rgba(0, 0, 0, 0.87);
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: space-around;
  box-sizing: border-box;
  background: white;
  font-size: 14px;
  border-radius: 4px;
  min-height: 34px;
}

.non-sortable-box {
  font-size: 14px;
  color: rgba(0, 0, 0, 0.87);
  display: flex;
  flex-direction: column;
  align-items: stretch;
  min-height: 30px;
}

.rowBox {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.justify-between{
  justify-content: space-between;
}

.sub-detail {
  padding: 5px 5px 5px 50px;
  border-top: solid 1px rgba(0, 0, 0, 0.2);
}

.details-showing {
  background-color: #E6E6E6;
}

.selection-details {
  border-top: 1px solid #CCCCCC;
  padding-left: 6rem;
  background-color: #F6F6F6;
  height: 30px;
  display: flex;
  align-items: center;
}

.sortable-box {
  cursor: move;
}

.sortable-box:hover {
  border: 1px solid #E6E6E6;
  background-color: #E6E6E6;
  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.29)
}

.cdk-drag-preview {
  box-sizing: border-box;
  border-radius: 4px;
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
              0 8px 10px 1px rgba(0, 0, 0, 0.14),
              0 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.cdk-drag-placeholder {
  opacity: 0;
}

.cdk-drag-animating {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.sortable-list.cdk-drop-list-dragging .sortable-box:not(.cdk-drag-placeholder) {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.disabledIcon {
  color: #BBBBBB
}

.hiddenIcon {
  color: #FFFFFF;
}

.subHeading{
  font-size: smaller;
  text-align: right;
}

.name {
  font-size: 14px;
}

.arrows {
  width: 40px;
}

.selectionName {
  width: 240px;
}

.setName {
  font-weight: bold;
  font-size: 13px;
  padding-left: 0px;
}

hr {
  margin-top: 10px;
  margin-bottom: 5px;
  height: 1px;
}

.dialog-overlay {
  background-color: white;
}

.customDropdown {
  min-width: 130px;
}

::ng-deep .multi-select-dialog-panel .mat-dialog-container {
  padding: 24px !important;
  box-shadow: 0 1px 6px 0 rgba(0,0,0,.3);
}

.multi-select-ml-1 {
  margin-left:   0.25rem !important; 
}
.multi-select-ml-2 {
  margin-left:   0.5rem !important; 
}
.multi-select-ml-3 {
  margin-left:   0.75rem !important; 
}
.multi-select-mr-1 {
  margin-right:   0.25rem !important; 
}
.multi-select-mt-3 {
  margin-top: 0.75rem !important;
}

